--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
+  
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
@@ -17,28 +20,43 @@
 <body>
 
   <!-- Rating state start -->
+<section class="rating-container">
 
-  How did we do?
+  <img src="images/icon-star.svg" alt="">
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+  <h1>How did we do?</h1>
 
-  1 2 3 4 5
+  <p>Please let us know how we did with your support request. All feedback is appreciated 
+    to help us improve our offering!</p>
 
-  Submit
+    <div class="button-list">
+      <button class="rating-button">1</button><button class="rating-button">2</button><button class="rating-button">3</button><button class="rating-button">4</button><button class="rating-button">5</button>
 
-  <!-- Rating state end -->
+    </div>
 
-  <!-- Thank you state start -->
+  
 
-  You selected <!-- Add rating here --> out of 5
+  <button class="submit-button">Submit</button>
 
-  Thank you!
 
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
+ 
+</section>
+ 
 
-  <!-- Thank you state end -->
+
+
+<section class="submit-container">
+  <img src="images/illustration-thank-you.svg" alt="">
+  <p class="top-text">You selected <!-- Add rating here --> out of 5</p>
+
+  <h2>Thank you!</h2>
+
+  <p>We appreciate you taking the time to give a rating. If you ever need more support, 
+    don’t hesitate to get in touch!</p>
+
+
+</section>
+  
 
   
   <div class="attribution">
